k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      name: forntend-pod
      namespace: chat-app  
      labels:
        app: frontend

    spec:
      containers:
      - name: chatapp-frontend
        image: mujtabas/chatapp-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
