k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      name: mongodb-pod
      namespace: chat-app
      labels:
        app: mongodb

    spec:
      containers:
      - name: chatapp-mongodb
        image: mongo:6.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db  
      
      volumes:
      - name: mongo-data    
        persistentVolumeClaim:
         claimName: mongodb-pvc
